stateDiagram-v2
    [*] --> INIT
    INIT --> CHECK_IGN : Khởi tạo xong
    CHECK_IGN --> DRIVING : IGN = ON
    CHECK_IGN --> PARKED : IGN = OFF
    DRIVING --> PARKED : IGN = OFF
    PARKED --> ALARM : Motion detected (IMU interrupt)
    PARKED --> HEARTBEAT : Timer wake-up
    ALARM --> PARKED : Motion stopped, IGN = OFF
    HEARTBEAT --> SLEEP : Sau khi gửi heartbeat
    SLEEP --> CHECK_IGN : Wake-up từ timer hoặc IMU